--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "outDir": "./dist",
+    "outDir": "./build",
     "lib": [
       "dom",
       "dom.iterable",
@@ -17,10 +17,12 @@
     "module": "commonjs",
     "moduleResolution": "node", 
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "react-jsx"
+    "isolatedModules": true
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
