--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "build/index.js",
+  "main": "build/app.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --files src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --files src/app.ts",
     "build": "tsc",
+    "lint": "eslint --ext .ts src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.1.0"
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
