--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,19 +1,30 @@
 {
   "compilerOptions": {
-    "target": "es2018",
-    "module": "nodenext",
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    // "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "lib": ["dom", "es6", "es2018", "esnext.asynciterable"],
+    "module": "ESNext",
     "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "moduleResolution": "NodeNext",
     "removeComments": true,
-    "strict": true,
     "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -23,8 +34,7 @@
     "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["**/node_modules", "dist"]
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
