--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "11.11.0",
     "@mui/icons-material": "5.14.8",
     "@mui/material": "5.14.8",
+    "@supabase/auth-ui-react": "^0.4.5",
+    "@supabase/supabase-js": "^2.36.0",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
