--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-dom": "18.2.0",
     "react-scripts": "2.1.3",
     "typescript": "4.9.5",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "wouter": "^2.11.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
