--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -28,7 +28,7 @@
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "baseUrl": ".",
+    "baseUrl": "src",
     "declaration": true,
     "incremental": true,
     "noImplicitAny": false,
