--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "concurrently": "^8.2.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.3.1"
   },
   "devDependencies": {
     "@tsconfig/node-lts": "^18.12.5",
