--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "@monaco-editor/react": "^4.5.2",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@supabase/auth-ui-react": "^0.2.8",
+    "@supabase/auth-ui-shared": "^0.1.7",
+    "@supabase/supabase-js": "^2.37.0",
     "@uidotdev/usehooks": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
