--- a/backend/package.json
+++ b/backend/package.json
@@ -25,9 +25,10 @@
     "prisma": "^5.3.1"
   },
   "devDependencies": {
+    "@prisma/client": "^4.10.1",
     "@tsconfig/node-lts": "^18.12.5",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.6.3",
+    "@types/node": "^20.8.2",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.49.0",
