--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.3.1"
   },
