Add matching service BE

--- a/matching-service/tsconfig.json
+++ b/matching-service/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "./dist",
     "moduleResolution": "NodeNext",
     "removeComments": true,
+    "strictNullChecks": false,
     "strict": true,
     "noImplicitThis": true,
     "noUnusedLocals": false,
