--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
+    "redis": "redis-server",
     "build": "npx tsc",
     "start": "ts-node src/app.ts",
     "dev": "nodemon",
@@ -16,10 +17,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/redis": "^4.0.11",
+    "body-parser": "^1.20.2",
+    "class-validator": "^0.14.0",
     "concurrently": "^8.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "redis": "^4.6.10",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@tsconfig/node-lts": "^18.12.5",
