--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "@supabase/auth-ui-shared": "^0.1.7",
     "@supabase/supabase-js": "^2.37.0",
     "@uidotdev/usehooks": "^2.3.1",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-split": "^2.0.14"
   },
