--- a/backend/users/.env.example
+++ b/backend/users/.env.example
@@ -6,4 +6,4 @@
 
 DIRECT_URL="postgres://postgres:<password>@db.<database>.supabase.co:5432/postgres"
 DATABASE_URL="postgres://postgres:<password>@db.<database>.supabase.co:6543/postgres?pgbouncer=true?schema=public"
-PORT="8082"
+USER_PORT=3001
