--- a/backend/questions/.env.example
+++ b/backend/questions/.env.example
@@ -6,4 +6,4 @@
 
 DIRECT_URL="postgres://postgres:<password>@db.<database>.supabase.co:5432/postgres"
 DATABASE_URL="postgres://postgres:<password>@db.<database>.supabase.co:6543/postgres?pgbouncer=true?schema=public"
-PORT="8081"
+QUESTION_PORT=3000
