--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,17 @@ services:
     networks:
       - default
 
+  interview-service:
+    build:
+      context: ./interview-service
+    restart: always
+    env_file:
+      - ./interview-service/.env
+    ports:
+      - ${SOCKET_PORT}:${SOCKET_PORT}
+    networks:
+      - default
+
   question-service:
     build:
       context: ./backend/questions
