--- a/interview-service/package.json
+++ b/interview-service/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "start": "node dist/index.ts",
+    "start": "nodemon index.ts",
     "dev": "nodemon index.ts"
   },
   "keywords": [],
