--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,3 +2,4 @@ VITE_APP_SUPABASE_URL=
 VITE_APP_ANON_KEY=
 VITE_APP_QUESTIONS_BACKEND_URL=
 VITE_APP_USERS_BACKEND_URL=
+VITE_APP_MATCH_BACKEND_URL='http://localhost:3005'
