--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/redis": "^4.0.11",
+    "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "class-validator": "^0.14.0",
     "concurrently": "^8.2.1",
