feat: socket x matching service integration
- Add redis routing to socket service
- Add persistent storage for session, which stores messages and code
- Add code syncing

--- a/interview-service/tsconfig.json
+++ b/interview-service/tsconfig.json
@@ -26,6 +26,6 @@
     "resolveJsonModule": true,
     "types": ["node"]
   },
-  "include": ["./*.ts"],
+  "include": ["./*.ts", "src/socket/sessionStore.ts", "index.ts"],
   "exclude": ["**/node_modules", "dist"]
 }
