--- a/interview-service/package.json
+++ b/interview-service/package.json
@@ -13,9 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "redis": "^4.6.10",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
