--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 VITE_APP_SUPABASE_URL=
 VITE_APP_ANON_KEY=
-VITE_APP_QUESTIONS_BACKEND_URL=
-VITE_APP_USERS_BACKEND_URL=
+VITE_APP_QUESTIONS_BACKEND_URL='http://localhost:3000'
+VITE_APP_USERS_BACKEND_URL='http://localhost:3001'
 VITE_APP_MATCH_BACKEND_URL='http://localhost:3005'
