--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/node": "16.18.48",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.6.1",
     "fsevents": "2.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
