Add user password and update delete functionality

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,3 +4,4 @@ VITE_APP_HOST=localhost
 VITE_APP_QUESTIONS_BACKEND_PORT="3000"
 VITE_APP_USERS_BACKEND_PORT="3001"
 VITE_APP_MATCH_BACKEND_PORT='3005'
+VITE_APP_SUPABASE_PORT='5000'
