--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,12 @@
 VITE_APP_SUPABASE_URL=
 VITE_APP_ANON_KEY=
-VITE_APP_HOST=localhost
-VITE_APP_QUESTIONS_BACKEND_PORT="3000"
-VITE_APP_USERS_BACKEND_PORT="3001"
-VITE_APP_MATCH_BACKEND_PORT='3005'
-VITE_APP_SUPABASE_PORT='5000'
+VITE_APP_QUESTION_HOST=localhost
+VITE_APP_USERS_HOST=localhost
+VITE_APP_MATCH_HOST=localhost
+VITE_APP_INTERVIEW_HOST=localhost
+VITE_APP_SUPABASE_HOST=localhost
+VITE_APP_QUESTIONS_BACKEND_PORT=3000
+VITE_APP_USERS_BACKEND_PORT=3001
+VITE_APP_MATCH_BACKEND_PORT=3005
+VITE_APP_INTERVIEW_BACKEND_PORT=4000
+VITE_APP_SUPABASE_PORT=5000
