--- a/server/users/package.json
+++ b/server/users/package.json
@@ -16,18 +16,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.3.1",
     "concurrently": "^8.2.1",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "nodemon": "^3.0.1",
-    "prisma": "^5.3.1"
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
-    "@prisma/client": "^4.10.1",
+    "@prisma/client": "^5.6.0",
     "@tsconfig/node-lts": "^18.12.5",
     "@types/express": "^4.17.17",
     "@types/node": "^20.8.2",
@@ -42,6 +40,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.0.3",
+    "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
